# light-discord

./: .gitignore  CODEX_HANDOFF.md  Cargo.toml  LICENSE  README.md  project_plan.md
crates/light-discord-auth/: Cargo.toml
crates/light-discord-auth/src/: lib.rs
crates/light-discord-client/: Cargo.toml
crates/light-discord-client/src/: app.rs  fonts.rs  main.rs  net.rs  screen_share.rs  voice.rs
crates/light-discord-core/: Cargo.toml
crates/light-discord-core/src/: lib.rs  protocol.rs
crates/light-discord-platform/: Cargo.toml
crates/light-discord-platform/src/: audio.rs  lib.rs  screen.rs  session_token.rs  voice.rs
crates/light-discord-platform/src/os/: linux.rs  mod.rs  unsupported.rs  windows.rs
crates/light-discord-server/: Cargo.toml
crates/light-discord-server/src/: main.rs
crates/light-discord-storage/: Cargo.toml
crates/light-discord-storage/migrations/: 0001_init.sql
crates/light-discord-storage/src/: lib.rs
crates/light-discord-storage/tests/: postgres.rs
deploy/: Dockerfile.server  docker-compose.yml  env.example
docs/: architecture.md  claude-code-delegation.md  development-operations.md  how-to-use-ja.md  requirements-checklist.md  requirements-ja.md
scripts/: check-postgres.sh  setup-linux-dev-deps.sh  setup-postgres-linux.sh
tasks/: 001-scaffold.md  002-voice-audio.md  003-product-hardening.md  004-storage-audit.md  005-auth-foundation.md  006-auth-session-audit-api.md
