[package]
name = "light-discord-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
password-hash.workspace = true
rand_core.workspace = true
sha2.workspace = true
uuid.workspace = true
