[package]
name = "light-discord-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
light-discord-auth = { path = "../light-discord-auth" }
light-discord-core = { path = "../light-discord-core" }
light-discord-storage = { path = "../light-discord-storage" }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
