[package]
name = "light-discord-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
light-discord-core = { path = "../light-discord-core" }
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true

[dev-dependencies]
light-discord-auth = { path = "../light-discord-auth" }

